# watcher

./: .gitignore  README.md  pyproject.toml
watcher/: cli.py  watcher.py
